--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "todo-backend",
   "version": "1.0.0",
   "scripts": {
-    "start": "nodemon -r tsconfig-paths/register src/server.ts",
+    "dev": "nodemon -r tsconfig-paths/register src/server.ts",
     "build": "tsc"
   },
   "keywords": [],
